--- a/standalone/css/style-bootstrap.css
+++ b/standalone/css/style-bootstrap.css
@@ -152,7 +152,7 @@
 /* Modal Align */
 
 /* Modal Alternative Fade */
-.modal.fade-2 .modal-dialog {
+.modal.nofade .modal-dialog {
     -moz-transition: none !important;
     -o-transition: none !important;
     -webkit-transition: none !important;
@@ -173,6 +173,15 @@
 .dropdown .dropdown-overflow-lg {
 	overflow: hidden;
 	overflow-y: auto;
+}
+.dropdown .dropdown-overflow:after,
+.dropdown .dropdown-overflow-sm:after,
+.dropdown .dropdown-overflow-md:after,
+.dropdown .dropdown-overflow-lg:after {
+	content: "";
+	width: 100%;
+	height: 0.25rem;
+	display: block;
 }
 .dropdown .dropdown-overflow {
 	max-height: 120px;
